welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: value =< is not a member of Int
	if((13<=a && a<=19)||(13<=b && b=<19)){
                                        ^